Retrotranslator Changelog
=================================

  - Backports for interfaces can be inherited when using the smart option.
  - Regular expressions can contain quoted strings that end with a back slash.

1.2.8 (2008-12-14)
---------------------------------
  - Dropped the support of the Android platform.
  - Smaller jars when using embedding since the runtime library doesn't use its advanced features internally.

1.2.7 (2008-06-22)
---------------------------------
  - Added limited support for using backports via reflection.
  - Added support for Java 5.0 features in regular expressions.
  - Added support for java.math.BigDecimal.stripTrailingZeros().
  - Added options -syncvolatile and -syncfinal to emulate Java 5.0 memory model.
  - Added support for methods highestOneBit and lowestOneBit of java.lang.Integer and java.lang.Long.
  - Added option -keepclasslit to prevent replacement of certain types with their base types in class literals.
  - Added a feature to identify the current JVM as Java 5.0 when using the java.lang.System.getProperty method.
  - Fixed a bug: cannot read annotations when using "-reflection safe".

1.2.6 (2008-02-29)
---------------------------------
  - The -embed option does not require the -destjar or -destdir options.
  - Fixed a bug introduced in 1.2.5. All hyphens in file and directory names were replaced with
    dollar signs in advanced mode or when the Retrotranslator.fixHyphen option was specified.

1.2.5 (2008-02-26)
---------------------------------
  - Added support for generics and annotations on the Android platform.
  - Added options -reflection and -stripannot.

1.2.4 (2008-01-28)
---------------------------------
  - Added support for Java 5.0 API on J2SE 1.3.
  - Fixed a bug in translation of inner classes for Java 1.3 and earlier.
  - Added a workaround for a bug #4776385 in Sun JDK 1.2.2 for Windows.
  - Fixed a bug: translated jar files didn't contain directory entries.