@@ -787,7 +787,7 @@
     <td>&nbsp;</td>
 </tr>
 <tr>
-    <td rowspan="5"><code>java.net</code></td>
+    <td rowspan="6"><code>java.net</code></td>
     <td><code>HttpURLConnection</code></td>
     <td>* (6 new methods)</td>
     <td>
@@ -808,9 +808,17 @@
     <td>&nbsp;</td>
 </tr>
 <tr>
+    <td><code>Socket<sup><a href="#3">3</a>,<a href="#5">5</a></sup></code></td>
+    <td><code>Socket(Proxy)</code></td>
+    <td>
+        Enable feature "<code>Socket.New</code>"
+        to to call the <code>Socket(Proxy)</code>
+        constructor, but the <code>Proxy</code> parameter will be ignored.
+</tr>
+<tr>
     <td><code>URL<sup><a href="#5">5</a></sup></code></td>
     <td>* (2 new methods)</td>
-    <td>The <code>Proxy</code> is ignored by the
+    <td>The <code>Proxy</code> parameter is ignored by the
         <code>URL.openConnection(Proxy)</code> method.
     </td>
 </tr>
@@ -1110,7 +1118,7 @@
 </ul>
 <h4><a name="license">License</a></h4>
 <pre>
-    Copyright (c) 2005 - 2008 Taras Puchko
+    Copyright (c) 2005 - 2009 Taras Puchko
     All rights reserved.
 
     Redistribution and use in source and binary forms, with or without
